--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,25 @@
-/* your code */
+table{
+	width: 100%;
+	border: 1;
+	cellpadding: 0;
+	cellspacing: 0;
+}
+th,th{
+	background color: #084DAB;
+	color: #fff;
+	font-size: 18px;
+	text-align: center;
+	padding: 18px;
+	
+}
+tr,td{
+	color: #000;
+	font-size: 18px;
+	text-align: center;
+	padding: 18px;
+	
+	
+}
+tr: nth-child(odd){
+	background-color: #D9DBDF;
+}
